<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:scrollbars="vertical"
        android:id="@+id/root"
        android:background="@drawable/background">
    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:textSize="35px"
            android:textColor="@android:color/white"/>
    <LinearLayout
            android:id="@+id/content"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:gravity="center">
        <TextView
                android:layout_marginTop="20px"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:textSize="20px"
                android:text="@string/description1"
                android:textColor="@android:color/white"/>
        <TextView
                android:layout_marginLeft="10px"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:textSize="20px"
                android:text="@string/description2"
                android:textColor="@android:color/white"/>
        <Button
                android:id="@+id/newGameButton2"
                android:layout_marginTop="50px"
                android:layout_height="wrap_content"
                android:layout_width="200px"
                android:text="@string/mini"
                android:background="@drawable/btn_square_overlay_pressed"
                android:textSize="20px"/>
        <Button
                android:id="@+id/newGameButton3"
                android:layout_height="wrap_content"
                android:layout_width="200px"
                android:background="@drawable/btn_square_overlay_pressed"
                android:text="@string/classique"
                android:textSize="20px"/>
        <Button
            android:id="@+id/scoreButton"
            android:layout_height="wrap_content"
            android:layout_width="200px"
            android:text="@string/score"
            android:background="@drawable/btn_square_overlay_pressed"
            android:textSize="20px"/>
        <Button
                android:id="@+id/closeGameButton"
                android:layout_marginTop="50px"
                android:layout_height="wrap_content"
                android:layout_width="200px"
                android:text="@string/quitter"
                android:background="@drawable/btn_square_overlay_pressed"
                android:textSize="20px"/>
    </LinearLayout>

</LinearLayout>
